Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes in current subversion repository (svn)
==============================================


Changes for 1.RC2 [2004-12-01] #12978
=====================================

 o #12963 better handling of possible interrupted exception in ConnectionPool

 o #12961 Added ConnectQos to xml server dump (without security parts)

 o #12960 Fixed delay of callback polling after a client reconnect

 o #12956 build.xml: JFlex and JavaCup are invoked only if files not up to date.

 o #12954 BUGFIX: Topic erase notification events could dead lock
   when at the same time a subscriber callback delivery took place

 o #12950 it is now possible to send CDATA in content when using xmlBlaster script

 o #12948 BUGFIX: The combination of subscribe() and get() on the same topic with cluster=true failed
   Thanks to Michal Masa xmasam@sgi.felk.cvut.cz

 o #12938 login- and logout events now return the public session id in the "__sessionId" client property as a long 
 
 o #12936 Added subversion property "svn:eol-style=native" to resolve CRLF (Win) and LF (UNIX) problems
   Thanks to David Viner dviner@yahoo-inc.com

 o #12932 BUGFIX: hierarchical sync sequence: TopicHandler, MsgUnitWrapper, MsgUnitCache to avoid deadlock

 o #12930 util.Global now throws IllegalArgumentException if loading of Property instance fails

 o #12818 Extended multiSubscribe support
   - Fixed multiSubscribe=false for XPath queries
   - Added support to reconfigure AccessFilter settings for existing subscriptions
   See: http://www.xmlblaster.org/xmlBlaster/doc/requirements/engine.qos.subscribe.multiSubscribe.html

 o C++ client library:
   - C++ Xerces must be newer 2.x (?), it must include xercesc/util/TransService.hpp
   - #12958 duplicateUpdates defaults now to true to have identical behaviour for Java and C++